force-app/main/default/objects/Course__c/fields/contactNumber__c.field-meta.xml
<CustomField>
    <fullName>contactNumber__c</fullName>
    <label>contactNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>