force-app/main/default/objects/Course__c/fields/Indian__c.field-meta.xml
<CustomField>
    <fullName>Indian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indian</label>
    <type>Checkbox</type>
</CustomField>