force-app/main/default/objects/Course__c/fields/studentname__c.field-meta.xml
<CustomField>
    <fullName>studentname__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>studentname</label>
    <referenceTo>myobject__c</referenceTo>
    <relationshipLabel>CourceTab</relationshipLabel>
    <relationshipName>CourceTab</relationshipName>
    <type>Lookup</type>
</CustomField>